kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-orchestration-backend
  labels:
    app: dissco-orchestration-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-orchestration-backend
  template:
    metadata:
      labels:
        app: dissco-orchestration-backend
    spec:
      serviceAccountName: dissco-orchestration-backend-sa
      containers:
        - name: dissco-orchestration-backend
          image: public.ecr.aws/dissco/dissco-core-orchestration-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
