kubernetes-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestration-backend-service
spec:
  selector:
    app: orchestration-backend
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: orchestration-backend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubernetes.demo.nsidr.org`) && PathPrefix(`/translator`)
      kind: Rule
      services:
        - name: orchestration-backend-service
          namespace: default
          port: 8080
